# Autowire

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  autowire-daemon-wrapper.sh  autowire-wrapper.sh  flathub.json  io.github.nidszxh.Autowire.json  meson.build  meson_options.txt
.opencode/plans/: gjs-migration.md
build-aux/meson/: postinstall.py
data/: io.github.nidszxh.Autowire.Daemon.service  io.github.nidszxh.Autowire.desktop.in  io.github.nidszxh.Autowire.gresource.xml  io.github.nidszxh.Autowire.metainfo.xml  io.github.nidszxh.Autowire.service  io.github.nidszxh.Autowire.service.in  meson.build
data/ui/: profile_dialog.blp  profile_dialog.ui  window.blp  window.ui
docs/: architecture.md
scripts/: autowire-daemon-wrapper.sh  autowire-wrapper.sh
src/: autowire-daemon.in  autowire.in  bt_profiles.js  config_mgr.js  config_mgr.py  constants.js  daemon.js  daemon.py  daemon_main.js  daemon_main.py  log.js  main.js  main.py  meson.build  pactl_parser.js  profile_dialog.js  profile_dialog.py  utils.js  window.js  window.py  wp_monitor.js  wp_monitor.py
tests/: conftest.py  test.sh  test_bt_profiles.js  test_config_mgr.js  test_config_mgr.py  test_daemon.js  test_daemon_routing.py  test_log.js  test_pactl_parser.js  test_utils.js  test_wp_monitor.js  test_wp_monitor.py
tests/fixtures/: wpctl_status_sample.txt
